# wilroserealty_pdf_parsing

./: .env.example  .gitignore  README.md  docker-compose.yml  setup.py
credentials/: credentials.example.json  token.example.json
data/credentials/fixture/: get_token.py  pyproject.toml
docker/ubuntu/: Dockerfile  setup.sh
pm2/: .gitignore  pm2.config.example.js  pm2.config.js
pm2/settings/: settings.js
src/: enrich_spreadsheet.py  pyproject.toml  run_processing.py  settings.py
src/commands/: enrich_spreadsheet.py
src/commands/base/: base_command.py
src/middlewares/: delayed_requests_middleware.py  http_proxy_middleware.py
src/spiders/: case_status_spider.py  pw_status_check_spider.py
src/utils/: case.py  case_enrichment_status.py  case_status.py  get_parsed_address.py  get_url_hash.py
src/utils/google_sheets/: google_sheets_client.py
src/utils/misc/: get_full_filename.py
src/utils/pdf/: __init__.py  denoise_image.py  get_pages_where_found.py  get_pdf_content.py  get_pdf_content_from_text_ocr.py  get_pdf_content_ocr.py  is_text_file.py
src/utils/pdf_parser/: pdf_parser.py
src/utils/pdf_parsers/: pdf_parser.py  pdf_parser_ab.py  pdf_parser_d.py
temp/: .gitignore
