[tool.poetry]
name = "pdf_excel_parser"
version = "0.1.0"
description = "Project for custom xlsx file enrichment"
authors = ["Dmytro Kovtun"]

[tool.poetry.dependencies]
python = ">3.8.1"
black = "^22.8.0"
PyPDF2 = "^2.11.1"
slate3k = "^0.5.3"
tabula-py = "^2.5.1"
pikepdf = "^6.2.1"
pytesseract = "^0.3.10"
opencv-python = "^4.6.0"
imutils = "^0.5.4"
matplotlib = "^3.6.2"
pdf2image = "^1.16.0"
Scrapy = "^2.7.1"
google-api-python-client = "^2.66.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.7.1"
python-dotenv = "^0.21.0"
playwright = "^1.28.0"
pypdfium2 = "^3.8.0"
usaddress = "^0.5.10"
PyMuPDF = "^1.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
